fix: correct the collapse-borderless class variable (#20718)

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -102,7 +102,7 @@
   }
 
   &-borderless {
-    background-color: @component-background;
+    background-color: @collapse-header-bg;
     border: 0;
   }
 
